# LEDrums

./: .gitignore  .infisical.json  AGENTS.md  CLAUDE.md  CONTEXT.md  PRODUCT.md  README.md  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
.mex/: AGENTS.md  ROUTER.md  config.json
.mex/context/: architecture.md  conventions.md  decisions.md  setup.md  stack.md
.mex/events/: decisions.jsonl
.mex/patterns/: INDEX.md  add-a-modifier.md  add-an-effect.md  ui-shot-sweep.md
.mex/placeholders/: active-song-sections.md  canonical-voice-graph-types.md  current-invariant-notes.md  domain-id-factory.md  editable-object-rows.md  graph-node-metadata.md  inspector-slices.md  live-spot-check-plan.md  numeric-commit-parser.md  patch-flow-controller.md  production-app-state.md  project-topology-source.md  prototype-canvas-boundary.md  server-main-slices.md  shared-flow-workspace.md  shared-ws-protocol.md  show-sync-controller.md  token-alias-migration.md  triggerlab-store-slices.md  view-form-helpers.md
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: app.json  default.json  share.json  splash.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  native_midi.rs
docs/: 2026-07-09-prompt.md  design-system.html  kit-hoop-pixel-counts.md  ui-shots-hardening-2026-07-08.md  unified-ui-wireframe.html
prototype/: c2-patch-graph-canvas.html
scripts/: dev.mjs  pixlite-probe.mjs  with-gate-lock.mjs
(+929 files in other folders)
